--- a/CSS Files/index.css
+++ b/CSS Files/index.css
@@ -4,6 +4,10 @@
     padding:0;
     box-sizing: border-box;
 }
+.set
+{
+    margin-top: -110px; 
+}
 body
 {
     font-family: 'Poppins', sans-serif;
@@ -29,7 +33,8 @@ nav ul li
     display: inline-block;
     margin-right: 20px;
 }
-a{
+a
+{
     text-decoration: none;
     color:#555;
 }
@@ -55,6 +60,10 @@ p
 {
     flex-basis: 50%;
     min-width: 300px;
+}
+#Image
+{
+    margin-left: 100px;
 }
 .col-2 img
 {
@@ -83,8 +92,11 @@ p
 }
 .header
 {
-    /* background: radial-gradient(#fff,#eff8ff);    */
-    background-color: #eff8ff;
+    background: radial-gradient(#fff,#ffd6d6);   
+}
+.header .row
+{
+   margin-top: 70px; 
 }
 .logo
 {
@@ -116,7 +128,7 @@ p
     padding-left:25px;
     padding-right: 25px;
 }
-/* ------------Featured Products------ */
+/* ------------Featured goods------ */
 .col-04
 {
     flex-basis: 25%;
