--- a/CSS Files/index.css
+++ b/CSS Files/index.css
@@ -4,6 +4,14 @@
     padding:0;
     box-sizing: border-box;
 }
+nav ul li::after
+{
+    content: '';
+    width:100%;
+    height: 2px;
+    display: block;
+    margin: auto;
+}
 .set
 {
     margin-top: -110px; 
@@ -478,6 +486,26 @@ td:last-child
 th:last-child
 {
     text-align: right;
+}
+
+/* ---------------About us page--------------- */
+
+.justify
+{
+    text-align: justify;
+}
+.about
+{
+    width: 100%;
+    text-align: center;
+    padding:30px 0;
+  
+}
+h4
+{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600px;
 }
 
 
